# web-graphic

./: .gitignore  CMakeLists.txt  README.md  example.cpp
assets/: graphic.html  receiver.js
cmake/: json.cmake
includes/graphic/: receiver.hpp  sender.hpp  web_graphic.hpp
includes/utilities/: shared_queue.hpp  string_utilities.hpp
src/graphic/: receiver.cpp  sender.cpp  utilities.cpp  web_graphic.cpp
src/utilities/: string_utilities.cpp
